--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,10 @@ DB_USER = "postgres"
 DB_PASSWORD = "your password"
 DB_HOST = "localhost"
 DB_PORT = "5432"
+
+# Database keys in production  --- PostgreSQL
+PROD_DB_NAME = "django-postgres"
+PROD_DB_USER = "postgres"
+PROD_DB_PASSWORD = "1111042593.cristian"
+PROD_DB_HOST = "localhost"
+PROD_DB_PORT = "5432"
