--- a/.env.example
+++ b/.env.example
@@ -14,15 +14,15 @@ GOOGLE_CLIENT_SECRET = "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"
 
 
 # Database keys in development  --- PostgreSQL
-DB_NAME = "django-postgres"
-DB_USER = "postgres"
-DB_PASSWORD = "your password"
-DB_HOST = "localhost"
-DB_PORT = "5432"
+DEV_DB_NAME = "django-postgres"
+DEV_DB_USER = "postgres"
+DEV_DB_PASSWORD = "1111042593.cristian"
+DEV_DB_HOST = "localhost"
+DEV_DB_PORT = "5432"
 
 # Database keys in production  --- PostgreSQL
-PROD_DB_NAME = "django-postgres"
-PROD_DB_USER = "postgres"
-PROD_DB_PASSWORD = "1111042593.cristian"
-PROD_DB_HOST = "localhost"
+PROD_DB_NAME = "data_base_6dzn"
+PROD_DB_USER = "data_base_6dzn_user"
+PROD_DB_PASSWORD = "W8E2Cn7qXgLOwvNfBL4gH6126WhaRpyj"
+PROD_DB_HOST = "dpg-cns71c21hbls738sps9g-a"
 PROD_DB_PORT = "5432"
