Update settings and enviorement keys

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ PROD_DB_USER = "data_base_6dzn_user"
 PROD_DB_PASSWORD = "W8E2Cn7qXgLOwvNfBL4gH6126WhaRpyj"
 PROD_DB_HOST = "dpg-cns71c21hbls738sps9g-a"
 PROD_DB_PORT = "5432"
+
+# Supported domains
+DOMAINS = ["https://impact-x.onrender.com", "https://api-news-v2.onrender.com", "https://web-portfolio-z9ym.onrender.com"]
