Update .env file

--- a/.env.example
+++ b/.env.example
@@ -28,4 +28,4 @@ PROD_DB_HOST = "dpg-cns71c21hbls738sps9g-a"
 PROD_DB_PORT = "5432"
 
 # Supported domains
-DOMAINS = ["https://impact-x.onrender.com", "https://api-news-v2.onrender.com", "https://web-portfolio-z9ym.onrender.com"]
+DOMAINS = "https://impact-x.onrender.com, https://api-news-v2.onrender.com, https://web-portfolio-z9ym.onrender.com"
