--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ GOOGLE_CLIENT_SECRET = "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"
 # Database keys in development  --- PostgreSQL
 DEV_DB_NAME = "django-postgres"
 DEV_DB_USER = "postgres"
-DEV_DB_PASSWORD = "1111042593.cristian"
+DEV_DB_PASSWORD = "your password"
 DEV_DB_HOST = "localhost"
 DEV_DB_PORT = "5432"
 
